--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,37 @@
 # Dependencies
-node_modules/
+**/node_modules
+**/.pnp
+**/.pnp.js
 
-# Environment variables
+# Testing
+**/coverage
+
+# Production
+**/build
+**/dist
+
+# Environment Variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Build files
-/build
-/dist
-
-# Debug logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE files
+# IDE
 .vscode/
-.idea/ 
+.idea/
+
+# OS
+.DS_Store
+**/.DS_Store
+
+# Frontend specific
+frontend/.env
+
+# Backend specific
+backend/.env
