--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,28 @@
 # Dependencies
-**/node_modules
-**/.pnp
-**/.pnp.js
+node_modules/
+/frontend/node_modules/
+/backend/node_modules/
 
-# Testing
-**/coverage
+# Build
+/frontend/build/
+/backend/build/
+/dist
 
-# Production
-**/build
-**/dist
-
-# Environment Variables
+# Environment files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# IDE
+.vscode/
+.idea/
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# IDE
-.vscode/
-.idea/
-
 # OS
 .DS_Store
-**/.DS_Store
-
-# Frontend specific
-frontend/.env
-
-# Backend specific
-backend/.env
